# livesub

./: .gitignore  3rd-party-license.html  Cargo.toml  LICENSE  README.md  build.rs  livesub.ini  manifest.manifest
.cargo/: config  config.toml
src/: app.rs  asr.rs  audio.rs  config.rs  controller.rs  graphics.rs  gui.rs  lib.rs  main.rs  render.rs  renderer.rs  speech_to_text.rs  transcribe.rs  window.rs
src/app/: command.rs  config.rs
src/asr/: common.rs  parakeet.rs  reazonspeech.rs  silero_vad.rs  transcribe.rs  whisper.rs
src/asr/common/: conv.rs  cudnn_ctx.rs  mel.rs  tensor_ext.rs  window.rs
src/asr/parakeet/: attention.rs  conformer.rs  decoder.rs  encoder.rs  greedy_search.rs  joiner.rs  preprocessor.rs  subsampling.rs  tokenizer.rs
src/asr/reazonspeech/: decoder.rs  encoder.rs  greedy_search.rs  joiner.rs  preprocessor.rs  scaling.rs  subsampling.rs  tokenizer.rs  zipformer.rs
src/asr/silero_vad/: decoder.rs  encoder.rs  stft.rs
src/asr/whisper/: attention.rs  config.rs  decoder.rs  encoder.rs  preprocessor.rs
src/graphics/: context.rs  renderer.rs
src/gui/: app.rs  builder.rs  macros.rs  menu.rs  utils.rs  viewer.rs  window.rs
src/render/: device.rs  renderer.rs  style.rs  text.rs
src/speech_to_text/: audio.rs  mel.rs  text.rs  transcribe.rs
src/transcribe/: audio.rs  common.rs  decoder.rs  mel.rs  text.rs  transcriber.rs
