[package]
name = "livesub"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rust-ini = "0.21"
rubato = "0.16"
rustfft = {version = "6.2", features = ["avx", "sse"] }
byteorder = "1.5"
serde_json = "1.0"
hf-hub = "0.4"
tokenizers = "0.21"
candle = { version = "0.8", features = ["cuda"], package="candle-core"}
candle-nn = { version = "0.8", features = ["cuda"]}
candle-transformers = { version = "0.8", features = ["cuda"]}

[dependencies.windows]
version = "0.60"
features = [
    "Foundation_Numerics",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "System",
    "UI_Composition",
    "UI_Composition_Desktop",
]

[dependencies.windows-core]
version = "0.60"

[dependencies.windows-numerics]
version = "0.1"

[build-dependencies]
winres = "0.1"
