[package]
name = "livesub"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle = { version = "0.9.1", package="candle-core", features = ["cuda", "cudnn"]}
candle-nn = { version = "0.9.1", features = ["cuda", "cudnn"]}
cudarc = { version="0.16.6", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cudnn", "cuda-version-from-build-system", "dynamic-linking"], default-features=false  }
realfft = "3.5.0"
rust-ini = "0.21.3"

[dependencies.windows]
version = "0.62.2"
features = [
    "Foundation_Numerics",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "System",
    "UI_Composition",
    "UI_Composition_Desktop",
]

[dependencies.windows-numerics]
version = "0.3.1"

[build-dependencies]
winres = "0.1.12"
